Listen for push event with bib

--- a/.github/workflows/retraction_checker.yml
+++ b/.github/workflows/retraction_checker.yml
@@ -1,8 +1,11 @@
 name: Retracted Articles Check
 
 on:
+  push:
+    paths:
+      - "**/*.bib"
   schedule:
-    - cron: '0 0 1 * *'
+    - cron: "0 0 1 * *"
   workflow_dispatch:
 
 jobs:
