--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*csv
+*parquet
+*xls*
+
 # Created by https://www.toptal.com/developers/gitignore/api/stata
 # Edit at https://www.toptal.com/developers/gitignore?templates=stata
 
